[gd_scene load_steps=12 format=3 uid="uid://bb0e23turmgv5"]

[ext_resource type="Texture2D" uid="uid://dcek8l4n6dqt4" path="res://Res/menu frame.png" id="1_tifnf"]
[ext_resource type="Script" path="res://Scenes/mutatuion_weapon.gd" id="1_ybfpn"]
[ext_resource type="FontFile" uid="uid://bnimycfhliitt" path="res://Res/aseprite-remix.ttf" id="2_bjrev"]
[ext_resource type="Texture2D" uid="uid://co7ipp52uimuv" path="res://Res/button.png" id="3_0w3cc"]
[ext_resource type="Texture2D" uid="uid://dxy7aus7y5qft" path="res://Res/button pressed.png" id="4_dl71u"]
[ext_resource type="Texture2D" uid="uid://dqn2gna42tmyb" path="res://Res/button hover.png" id="5_pa073"]
[ext_resource type="Texture2D" uid="uid://jr7n0gl7beng" path="res://Res/frame2.png" id="7_oi1yl"]
[ext_resource type="Texture2D" uid="uid://bi0dqbxj4n0n" path="res://Res/weapon.png" id="8_0umtr"]
[ext_resource type="Texture2D" uid="uid://ck75yhjelwvpe" path="res://Res/toxic ui element full.png" id="9_df7kg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_42f62"]
atlas = ExtResource("8_0umtr")
region = Rect2(92.0806, 98.1208, 28.0741, 16.5398)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjsg6"]
atlas = ExtResource("8_0umtr")
region = Rect2(62.9416, 18.628, 31.121, 10.4462)

[node name="MutatuionWeapon" type="CanvasLayer"]
script = ExtResource("1_ybfpn")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -286.0
offset_right = 375.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tifnf")

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -191.0
offset_right = 87.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bjrev")
theme_override_font_sizes/font_size = 41
text = "Mutation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="TextureRect/Label2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_bjrev")
text = "Choose weapon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitBtn" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 180.0
offset_right = 75.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_0w3cc")
texture_pressed = ExtResource("4_dl71u")
texture_hover = ExtResource("5_pa073")
stretch_mode = 6

[node name="Label" type="Label" parent="TextureRect/ExitBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_bjrev")
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartBtn" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 126.0
offset_right = 75.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_0w3cc")
texture_pressed = ExtResource("4_dl71u")
texture_hover = ExtResource("5_pa073")
stretch_mode = 6

[node name="Label" type="Label" parent="TextureRect/StartBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_bjrev")
text = "Mutate!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -100.0
offset_right = -27.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_oi1yl")

[node name="TextureRect6" type="TextureRect" parent="TextureRect/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -15.0
offset_right = 26.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_42f62")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -100.0
offset_right = 90.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_oi1yl")

[node name="TextureRect6" type="TextureRect" parent="TextureRect/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jjsg6")

[node name="TextureRect5" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 17.0
offset_right = 28.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_df7kg")

[node name="TextureRect3" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -1.0
offset_right = -27.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_oi1yl")

[node name="TextureRect4" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -1.0
offset_right = 90.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_oi1yl")

[connection signal="gui_input" from="TextureRect/TextureRect" to="." method="_on_texture_rect_gui_input"]
[connection signal="gui_input" from="TextureRect/TextureRect2" to="." method="_on_texture_rect_2_gui_input"]
